--- a/index.html
+++ b/index.html
@@ -103,30 +103,23 @@
         </div>
 
         <div class="list">
-            <div class="list-title">Prices</div>
-
-            <div class="list-item">
-                -
-                <div class="item-name">Flight Tickets</div>
-                <div class="item-price">6000 TL</div>
+            <div class="list-header">
+                <div class="list-title">Prices List</div>
             </div>
 
-            <div class="list-item">
-                -
-                <div class="item-name">Documents</div>
-                <div class="item-price">4000 TL</div>
+            <div class="list-container">
+                <div class="item-add-btn">Add item</div>
             </div>
 
-            <div class="list-item">
-                -
-                <div class="item-name">Money for Spend</div>
-                <div class="item-price">8000 TL</div>
+            <div class="add-item-div">
+                <input type="text" class="add-item-name-input list-input" placeholder="Name">
+                <input type="number" class="add-item-price-input list-input" placeholder="Price">
+                <div class="add-item-submit-btn">Add!</div>
             </div>
 
-            <div class="list-item">
-                <div class="item-name total">Total:</div>
-                <div class="item-price total">18000 TL</div>
+            <div class="list-items">
             </div>
+
         </div>
 
         <div class="menu">
