--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="https://kit.fontawesome.com/fa178081cb.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="mobile-alert">
+        Please use computer or tablets for use this website because we don't have mobile-friendly website yet. <p></p>Thank you for your understanding. 
+    </div>
     <div class="setup">
         <div class="setup-container">
             <div class="setup-title">Piggy Bank</div>
@@ -119,7 +122,6 @@
 
             <div class="list-items">
             </div>
-
         </div>
 
         <div class="menu">
@@ -129,9 +131,11 @@
 
     <div class="sidebar">
         <div class="sidebar-header"><i class="fas fa-times close-sidebar-btn"></i></div>
+
         <div class="sidebar-item reset-name-btn"><div class="sidebar-item-text">Reset Goal's Name</div></div>
         <div class="sidebar-item reset-price-btn"><div class="sidebar-item-text">Reset  Goal Money</div></div>
         <div class="sidebar-item reset-piggy-bank-btn"><div class="sidebar-item-text">Reset Piggy Bank</div></div>
+        <a href="http://www.erdemyilmaz.me/about" target="_blank" class="sidebar-item about-me-btn"><div class="sidebar-item-text">About Me</div></a>
 
         <div class="switch-box">
             <div class="dark-side side"><i class="fas fa-moon"></i></div>
